# oricCompilerBenchmark

./: .clang-format  .gitignore  CMakeLists.txt  ChangeLog.txt  Makefile  README.md
archive/: Makefile  README.md
archive/cfg-cc65/: atmosc.cfg
archive/cfg-vbcc/: atmosc.cfg
archive/cfg-vbcc/atmos/: vlinkm.cmd
archive/src/: aes256-main.c  aes256.h  dummy-main.c
archive/tap-aes256/: aes256-osdk.tap  aes256-vbcc.tap
archive/tap-aes256-tab/: aes256-tab-vbcc.tap
archive/tap-dummy/: dummy-cc65.tap  dummy-vbcc.tap
archive/tools/: oheader.lua
cfg-vbcc/atmos/: vlink.cmd
cfg-vbcc/atmos/include/: stdarg.h  stdlib.h
mos6502vm/: CMakeLists.txt  README.md
mos6502vm/src/: fake6502.c  mos6502-trace.c  mos6502vm.c  mos6502vm.h
playground/: .gitignore  HACKING.md  clean.sh  run-all-benchmarks.sh
playground/libmos6502vm/: _.s  _putc.c  _puts.c  compat.h  conio.h  library.ndx  types.h
playground/samples/: sort-helper.h  test-samples.sh
playground/samples/00-type-sizes/: type-sizes.c
playground/samples/02-hello-world/: hello-world.c
playground/samples/10-pi/: pi.c
playground/share/: Makefile  oheader.lua
playground/tools/: .gitignore  bench-params.lua  bench.lua  report-csv-html.lua  report-csv-js.lua  test-samples-reorder.sh  test-samples.sh
playground/www/: .gitignore  bench-size.csv  bench-size.js  bench-speed.csv  bench-speed.js  bench.css  bench.html  bench.js  date-size.js  date-speed.js
src/: aes256.c
tap-aes256/: aes256-cc65.tap
tap-aes256-tab/: aes256-tab-cc65.tap  aes256-tab-osdk.tap
tap-dummy/: dummy-osdk.tap
tools/: oheader.lua
(+1893 files in other folders)
